# workshop_datapipeline_w1

./: README.md  play_with_env.py
airflow/: .env  docker-compose.yml
airflow/mnt/dags/: .airflowignore  dog_api_pipeline.py  everyday_dag.py  weather_api_dag.py
airflow/weather/: pyproject.toml
airflow/weather/weather/: .user.yml  profiles.yml
airflow/weather/weather/models/: average_temperature_in_bkk.sql  my_model.sql
my_first_project/: dogs.json  my_first_data_pipeline.py  pyproject.toml
play_with_data_quality/: main.py  pyproject.toml
play_with_gx/: data.csv  main.py  pyproject.toml
