[tool.poetry]
name = "my-first-project"
version = "0.1.0"
description = ""
authors = ["penquin501 <48145677+penquin501@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
