[tool.poetry]
name = "play-with-data-quality"
version = "0.1.0"
description = ""
authors = ["penquin501 <48145677+penquin501@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
great-expectations = "^0.18.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
